--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.example.buntafujikawa.rssreader"
+        applicationId "com.sugosumadesu.buntafujikawa.rssreader"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
